// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewTransaction should display a confirmation screen 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <div
        class="MuiStack-root css-1sazv7p-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1ve84rd-MuiPaper-root-MuiAccordion-root"
            colorlevel="info"
            style="--Paper-shadow: none;"
          >
            <h3
              class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
            >
              <button
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-10sjung-MuiButtonBase-root-MuiAccordionSummary-root"
                data-testid="decoded-tx-summary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-1r0e0ir-MuiAccordionSummary-content"
                >
                  <div
                    class="MuiStack-root css-1bujbuo-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-0"
                    >
                      Advanced details
                      <span
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <mock-icon
                          aria-hidden=""
                          class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-17ibv3e-MuiSvgIcon-root"
                          focusable="false"
                        />
                      </span>
                    </div>
                  </div>
                </span>
                <span
                  class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </span>
              </button>
            </h3>
            <div
              class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                >
                  <div
                    class="MuiAccordion-region"
                    role="region"
                  >
                    <div
                      class="MuiAccordionDetails-root css-w74p4c-MuiAccordionDetails-root"
                      data-testid="decoded-tx-details"
                    >
                      <div
                        class="MuiStack-root css-14g2pqt-MuiStack-root"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-111k8jw-MuiTypography-root"
                        >
                          Transaction data
                        </p>
                        <div
                          class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                            data-testid="tx-row-title"
                            style="word-break: break-word;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                            >
                              to:
                            </p>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            data-testid="tx-data-row"
                          >
                            <div
                              class="container"
                            >
                              <div
                                class="MuiBox-root css-1lchl8k"
                              >
                                <div
                                  class="addressContainer"
                                >
                                  <div
                                    class="MuiBox-root css-b5p5gz"
                                  >
                                    <span
                                      aria-label="Copy to clipboard"
                                      class=""
                                      data-mui-internal-clone-element="true"
                                      style="cursor: pointer;"
                                    >
                                      <span>
                                        0x0000000000000000000000000000000000000000
                                      </span>
                                    </span>
                                  </div>
                                  <span
                                    aria-label="Copy to clipboard"
                                    class=""
                                    data-mui-internal-clone-element="true"
                                    style="cursor: pointer;"
                                  >
                                    <button
                                      aria-label="Copy to clipboard"
                                      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <mock-icon
                                        aria-hidden=""
                                        class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                        data-testid="copy-btn-icon"
                                        focusable="false"
                                      />
                                    </button>
                                  </span>
                                  <div
                                    class="MuiBox-root css-yjghm1"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                            data-testid="tx-row-title"
                            style="word-break: break-word;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                            >
                              value:
                            </p>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            data-testid="tx-data-row"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mxvcov-MuiTypography-root"
                            >
                              0x0
                            </p>
                          </div>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                            data-testid="tx-row-title"
                            style="word-break: break-word;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                            >
                              data:
                            </p>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            data-testid="tx-data-row"
                          >
                            <div
                              class="encodedData MuiBox-root css-0"
                              data-testid="tx-hexData"
                            >
                              <span
                                aria-label="Copy to clipboard"
                                class=""
                                data-mui-internal-clone-element="true"
                                style="cursor: pointer;"
                              >
                                <button
                                  aria-label="Copy to clipboard"
                                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                  tabindex="0"
                                  type="button"
                                >
                                  <mock-icon
                                    aria-hidden=""
                                    class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                    data-testid="copy-btn-icon"
                                    focusable="false"
                                  />
                                </button>
                              </span>
                              0x
                               
                            </div>
                          </div>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                            data-testid="tx-row-title"
                            style="word-break: break-word;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                            >
                              operation:
                            </p>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            data-testid="tx-data-row"
                          >
                            0 (call)
                          </div>
                        </div>
                        <div
                          class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                            data-testid="tx-row-title"
                            style="word-break: break-word;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                            >
                              nonce:
                            </p>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                            data-testid="tx-data-row"
                          >
                            100
                          </div>
                        </div>
                        <div
                          class="MuiBox-root css-kz5wc9"
                        />
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-111k8jw-MuiTypography-root"
                        >
                          Transaction hashes
                        </p>
                        <div
                          class="MuiStack-root css-hwnj0i-MuiStack-root"
                        >
                          <div
                            class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                              data-testid="tx-row-title"
                              style="word-break: break-word;"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                              >
                                Domain hash:
                              </p>
                            </div>
                            <div
                              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                              data-testid="tx-data-row"
                            >
                              <div
                                class="encodedData MuiBox-root css-0"
                                data-testid="tx-hexData"
                              >
                                <span
                                  aria-label="Copy to clipboard"
                                  class=""
                                  data-mui-internal-clone-element="true"
                                  style="cursor: pointer;"
                                >
                                  <button
                                    aria-label="Copy to clipboard"
                                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                    tabindex="0"
                                    type="button"
                                  >
                                    <mock-icon
                                      aria-hidden=""
                                      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                      data-testid="copy-btn-icon"
                                      focusable="false"
                                    />
                                  </button>
                                </span>
                                 
                              </div>
                            </div>
                          </div>
                          <div
                            class="MuiGrid-root MuiGrid-container css-1m1clne-MuiGrid-root"
                          >
                            <div
                              class="MuiGrid-root MuiGrid-item css-p1l0hx-MuiGrid-root"
                              data-testid="tx-row-title"
                              style="word-break: break-word;"
                            >
                              <p
                                class="MuiTypography-root MuiTypography-body1 css-shf88x-MuiTypography-root"
                              >
                                safeTxHash:
                              </p>
                            </div>
                            <div
                              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-1vd824g-MuiGrid-root"
                              data-testid="tx-data-row"
                            >
                              <div
                                class="encodedData MuiBox-root css-0"
                                data-testid="tx-hexData"
                              >
                                <span
                                  aria-label="Copy to clipboard"
                                  class=""
                                  data-mui-internal-clone-element="true"
                                  style="cursor: pointer;"
                                >
                                  <button
                                    aria-label="Copy to clipboard"
                                    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                                    tabindex="0"
                                    type="button"
                                  >
                                    <mock-icon
                                      aria-hidden=""
                                      class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-gvpe62-MuiSvgIcon-root"
                                      data-testid="copy-btn-icon"
                                      focusable="false"
                                    />
                                  </button>
                                </span>
                                 
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1whrnku-MuiTypography-root"
      >
        Transaction checks
      </h5>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <div
        class="wrapper"
      >
        <div
          class="icon sign"
        >
          <mock-icon
            aria-hidden=""
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            focusable="false"
          />
        </div>
        <div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1mp5g96-MuiTypography-root"
          >
            confirm
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body2 css-17vdyq3-MuiTypography-root"
          >
            You're about to 
            create and 
            confirm
             this transaction.
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-1q4nm6f-MuiCardActions-root"
      >
        <div
          class="MuiStack-root css-irtfmw-MuiStack-root"
        >
          <span
            aria-label="Please connect your wallet"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1hp2ejb-MuiButtonBase-root-MuiButton-root"
              data-testid="continue-sign-btn"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Continue
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReviewTransaction should display a loading component 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <div
        class="MuiBox-root css-17luq05"
      >
        <div
          class="box MuiBox-root css-0"
        >
          <div
            class="rect rectTl"
          />
          <div
            class="rect rectTr"
          />
          <div
            class="rect rectBl"
          />
          <div
            class="rect rectBr"
          />
          <div
            class="rect rectCenter"
          />
          <svg
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <filter
                id="gooey"
              >
                <fegaussianblur
                  in="SourceGraphic"
                  result="blur"
                  stdDeviation="3"
                />
                <fecolormatrix
                  in="blur"
                  mode="matrix"
                  result="goo"
                  values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9"
                />
                <fecomposite
                  in="SourceGraphic"
                  in2="goo"
                  operator="atop"
                />
              </filter>
            </defs>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReviewTransaction should display an error screen 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <div
        class="MuiStack-root css-1sazv7p-MuiStack-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1ve84rd-MuiPaper-root-MuiAccordion-root"
            colorlevel="info"
            style="--Paper-shadow: none;"
          >
            <h3
              class="MuiAccordion-heading css-cy7rkm-MuiAccordion-heading"
            >
              <button
                aria-expanded="false"
                class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters accordion css-10sjung-MuiButtonBase-root-MuiAccordionSummary-root"
                data-testid="decoded-tx-summary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-1r0e0ir-MuiAccordionSummary-content"
                >
                  <div
                    class="MuiStack-root css-1bujbuo-MuiStack-root"
                  >
                    <div
                      class="MuiBox-root css-0"
                    >
                      Advanced details
                      <span
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <mock-icon
                          aria-hidden=""
                          class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall css-17ibv3e-MuiSvgIcon-root"
                          focusable="false"
                        />
                      </span>
                    </div>
                  </div>
                </span>
                <span
                  class="MuiAccordionSummary-expandIconWrapper css-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                </span>
              </button>
            </h3>
            <div
              class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-cwrbtg-MuiCollapse-root"
              style="min-height: 0px;"
            >
              <div
                class="MuiCollapse-wrapper MuiCollapse-vertical css-1x6hinx-MuiCollapse-wrapper"
              >
                <div
                  class="MuiCollapse-wrapperInner MuiCollapse-vertical css-1i4ywhz-MuiCollapse-wrapperInner"
                >
                  <div
                    class="MuiAccordion-region"
                    role="region"
                  >
                    <div
                      class="MuiAccordionDetails-root css-w74p4c-MuiAccordionDetails-root"
                      data-testid="decoded-tx-details"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-1whrnku-MuiTypography-root"
      >
        Transaction checks
      </h5>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1w4z6qv-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiCardContent-root cardContent css-1lt5qva-MuiCardContent-root"
      data-testid="card-content"
    >
      <div
        class="wrapper"
      >
        <div
          class="icon sign"
        >
          <mock-icon
            aria-hidden=""
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
            focusable="false"
          />
        </div>
        <div>
          <h5
            class="MuiTypography-root MuiTypography-h5 css-1mp5g96-MuiTypography-root"
          >
            confirm
          </h5>
          <p
            class="MuiTypography-root MuiTypography-body2 css-17vdyq3-MuiTypography-root"
          >
            You're about to 
            create and 
            confirm
             this transaction.
          </p>
        </div>
      </div>
      <div
        class="MuiCardActions-root MuiCardActions-spacing css-1q4nm6f-MuiCardActions-root"
      >
        <div
          class="MuiStack-root css-irtfmw-MuiStack-root"
        >
          <span
            aria-label="Please connect your wallet"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1hp2ejb-MuiButtonBase-root-MuiButton-root"
              data-testid="continue-sign-btn"
              disabled=""
              tabindex="-1"
              type="submit"
            >
              Continue
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
